--- a/Script/regional_model/06_DKRZ_EffortFiles_regional_NEW.Rmd
+++ b/Script/regional_model/06_DKRZ_EffortFiles_regional_NEW.Rmd
@@ -25,6 +25,7 @@ library(data.table)
 library(mgcv)
 library(gridExtra)
 library(qs)
+library(arrow)
 
 select<-dplyr::select
 
@@ -93,10 +94,12 @@ dkrz <- file.path(gem_dir, "private/users/yannickr/DKRZ_EffortFiles/")
 #### NOTE: made this to 2017 now
 fwrite(x = effort2, file.path(dkrz, "effort_histsoc_1841_2017_regional_models.csv")) 
 qs::qsave(effort2, file.path(dkrz, "effort_histsoc_1841_2017_regional_models.qs")) # let's also save as a .qs file, since it make it much smaller (12x smaller)
+write_parquet(effort2, file.path(gem_dir, "public/fishmip/ISIMIP3a/InputData/effort_catch_data/effort_histsoc_1841_2017_regional_models.parquet"))
 
 # final catch 
 fwrite(x = catch3, file.path(dkrz, "calibration_catch_histsoc_1850_2017_regional_models.csv"))
 qs::qsave(catch3, file.path(dkrz, "calibration_catch_histsoc_1850_2017_regional_models.qs")) # save as qs as well
+write_parquet(catch3, file.path(gem_dir, "public/fishmip/ISIMIP3a/InputData/effort_catch_data/calibration_catch_histsoc_1850_2017_regional_models.parquet"))
 
 # upload to DKRZ
 # scp -r DKRZ_EffortFiles/* b381217@levante.dkrz.de:/home/b/b381217/temp_effort/
